--- a/index.html
+++ b/index.html
@@ -1,23 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>前后端开发小课堂</title>
-<link href="style.css" rel="stylesheet">
-
+    <title>简历</title>
+    <link rel="stylesheet" type="text/css" href="1.css" />
 </head>
 <body>
-    <h1 onclick="alterUser()">前后端小课堂</h1>
-    <p id="welcome-link">欢迎来到WESharp前后端培训课堂</p>
-    <a class="link" href="https://baidu.com/">AiDocx官网</a>
-    <a class="link" href="https://www.w3school.com.cn/">w3school官网</a>
-    <p></p>
-    <img src="QQ截图20201207201010.png">
-    <p>这是一个<strong>段落</strong></p>
-    <ol>
-        <li>Python</li>
-        <li>C++</li>
-        <li>Java</li>
-    </ol>
-</body>
-</html>
+    <div id="ddd">
+    <h1>Welcome</h1>
+    </div >
+    <div>
+        <div id="introduce">
+                <div id="b"><img id="bb" src="./head.jpg"></div>
+                <div class="bbb">
+                    <h2>大番薯</h2>
+                    <p class="a">13929735662 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspanasga@bb.com</p>
+                    <p class="c">华中可基大学|带一 &nbsp&nbsp    舞蹈学创新实验班</p>
+                </div>
+                <div class="bbb"id="dfa">
+                    <h2 id="dgaa">关于我</h2>
+                    <div id= "add">
+                    <ul>
+                        <li id="dfa">一年的兰州拉面经验</li>
+                        <li id="dhfjahjg">半年的吃饺子、吃包子经验</li>
+                        <li id="djshfj">发展方向：大盘鸡运动员</li>
+                    
+                    </ul>
+                    </div>
+                </div>
+                <div class="bbb" id ="iaf">
+                    <h2 id="htsdfg">熟练语言</h2>
+                    <div class="lll"><label>Marglish</label></div>
+                    <div class="lll"><label>Piglish</label></div>
+                    <div class="lll"><label>Heiglish</label></div>
+                    <div class="lll"><label>Kinglish</label></div>
+                    <div class="lll"><label>Biglish</label></div>
+        </div>
+    </div>  
+    <div id="yzdfgubi"><h2 style="color:aqua">项目经验</h2></div>
+    <div >
+        <div id="project">
+            <div class="jjj">
+                <div class="hhh"><img src="./1.jpg"></div>
+                <p class="ppp">兰州拉面</p>
+                <p class="xxx">2003.1.1-2004.1.9</p>
+                <p class="ccc">
+                    春江潮水连海平，海上明月共潮生。
+                    滟滟随波千万里，何处春江无月明！
+                    江流宛转绕芳甸，月照花林皆似霰；
+                    空里流霜不觉飞，汀上白沙看不见。
+                    江天一色无纤尘，皎皎空中孤月轮。</p>
+                    <div class="msn"><a href="http://www.baidu.com/"><button >查看Demo</button></a></div>            </div>
+            <div class="jjj">
+                <div class="hhh"><img src="./2.jpg"></div>
+                <p class="ppp"> 吃饺子</p>
+                <p class="xxx">2003.1.1-2003.7.8</p>
+                <p class="ccc">
+                    江畔何人初见月？江月何年初照人？
+                    人生代代无穷已，江月年年望相似。
+                    不知江月待何人，但见长江送流水。  
+                    白云一片去悠悠，青枫浦上不胜愁。  
+                    谁家今夜扁舟子？何处相思明月楼？</p>
+                    <div class="msn"><a href="http://www.baidu.com/"><button >查看Demo</button></a></div>            </div>
+            <div class="jjj">
+                <div class="hhh"><img src="./3.jpg"></div>
+                <p class="ppp">吃包子</p>
+                <p class="xxx">2003.1.1-2003.7.6</p>
+                <p class="ccc">
+                    玉户帘中卷不去，捣衣砧上拂还来。
+                    此时相望不相闻，愿逐月华流照君。  
+                    鸿雁长飞光不度，鱼龙潜跃水成文。
+                    昨夜闲潭梦落花，可怜春半不还家。
+                    江水流春去欲尽，江潭落月复西斜。</p>
+                    <div class="msn"><a href="http://www.baidu.com/"><button >查看Demo</button></a></div>
+            </div>
+        </div>
+    </div>
+    <div id="gongzuo"><h2 style="color:rgb(25, 187, 87)">工作经历</h2></div>
+    <div id="wu">
+        <p id="vfdewu">无</p>
+    </div>
+    <div id="lianxiwo">
+        <p id="lxw">联系我</p>
+    </div>
+    <div id="coll">
+        <div id="q"><img id="qq" src="./head.jpg"></div>
+        <div ><p id="col">大番薯</p></div>
+        <div><p id="cool">13929735662</p></div>
+        <div><p id="coool">anasga@bb.com</p></div>
+        <div id="dljauxdvhjskgns">
+            <img src="./erweima.png">
+            
+        </div>
+
+    </div>
